--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -12,19 +12,18 @@
     <!-- css -->
     <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- static -->
     <link rel="stylesheet" href="{% static 'blog/css/pace.css'%}">
     <link rel="stylesheet" href="{% static 'blog/css/custom.css'%}">
     <link rel="stylesheet" href="{% static 'blog/css/highlights/github.css'%}">
 
+
     <!-- js -->
     <script src="https://cdn.bootcss.com/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- static -->
     <script src="{% static 'blog/js/pace.min.js' %}"></script>
     <script src="{% static 'blog/js/modernizr.custom.js' %}"></script>
-
-    
-
-
 
 </head>
 
@@ -34,7 +33,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-5 col-xs-8">
                 <div class="logo">
-                    <h1><a href="{% url 'blog:index' %}"><b>Black</b> &amp; White</a></h1>
+                    <h1><a href="{% url 'blog:index' %}"><b>Leton</b>Soft</a></h1>
                 </div>
             </div><!-- col-md-4 -->
             <div class="col-md-8 col-sm-7 col-xs-4">
